--- a/csss/main.css
+++ b/csss/main.css
@@ -1,6 +1,7 @@
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
+    font-size:12px;
     position: relative;
     min-height: 100%;
 }
@@ -18,16 +19,10 @@ body {
     color: #ffffff;  
 }
 
-.whitetext{
-    color: #ffffff;  
-}
-
 .header { 
     position: relative;
     background-color: #153768;
     width: 100%;  
-
-
 }    
 
 img{
@@ -36,7 +31,7 @@ img{
 }
 
 .nav_box{     
-    width: 90%;
+    width: 80%;
     background-color: #efefef;
     border-top: 4px solid #1d71a2;
     margin: 5%;
@@ -50,22 +45,16 @@ img{
     padding: 20px;
 }
 
-  <!-- formular für Einträge-->
-  
+
   <!-- Tabelle auf der Infoseite -->
         
         
-  .container {
-    width: auto;
-    max-width: 1250px;
-    padding: 20px;
-}
 
        .tg  {
            border-collapse:collapse;
            border-spacing:0;border-color:#999;
            text-align: left; 
-           width: 70%;
+           width: 90%;
        }
        
        .tg td{
@@ -109,30 +98,38 @@ img{
         vertical-align:top;
        }
        
+ 
+  <!-- formular für Einträge-->
+  
        
+       td{
+          
+          
+       }
        
         table {
-            width: 90%;
+
+            width: 95%;
             text-align: center;
             margin: auto; 
             color: #000000;  
+            
         }
         
 
         label{
+              margin-right: 25px;
                 text-align: right;
-                float:left;
-                margin-right:15px;
+                float:left;    
+                padding-bottom: 5%;
         }
         
         
         .formbox {
-           border: 1px solid #d9d9d9;
-              
-            width: 80%;
-            margin-left: 10%;
-             top: 50%;
-              left: 50%;
+            font-size:12px;
+            border: 1px solid #d9d9d9;           
+            width: 76%;
+            margin-left: 15%;
             background: #FFF;
             border-radius: 10px;
             -webkit-border-radius:10px;
@@ -143,6 +140,7 @@ img{
                     }
       
          span{
+    font-size: 10px; 
     background: #fbfbfb;
     display: block;
     padding: 3px;
@@ -150,5 +148,5 @@ img{
     text-align: center;
     color: #C0C0C0;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 11px;          
+            
       }  
