--- a/css/main.css
+++ b/css/main.css
@@ -229,3 +229,26 @@ label{
     font-size:14px;
     padding:0px 5px;
 }      
+
+
+
+/* CSS für Collapse-Pfeile */
+    .accordion-caret .accordion-toggle:hover {
+        text-decoration: none;
+    }
+    .accordion-caret .accordion-toggle:hover span,
+    .accordion-caret .accordion-toggle:hover strong {
+        text-decoration: underline;
+    }
+    .accordion-caret .accordion-toggle:before {
+        font-size: 25px;
+        vertical-align: -3px;
+    }
+    .accordion-caret .accordion-toggle:not(.collapsed):before {
+        content: "▾";
+        margin-right: 0px;
+    }
+    .accordion-caret .accordion-toggle.collapsed:before {
+        content: "▸";
+        margin-right: 0px;
+    }
