--- a/css/main.css
+++ b/css/main.css
@@ -237,6 +237,9 @@ label{
     padding:0px 5px;
 }      
 
+.infos{
+    font-size: 16px;
+}  
 
 
 /* CSS für Collapse-Pfeile */
@@ -248,7 +251,7 @@ label{
         text-decoration: underline;
     }
     .accordion-caret .accordion-toggle:before {
-        font-size: 25px;
+        font-size: 20px;
         vertical-align: -3px;
     }
     .accordion-caret .accordion-toggle:not(.collapsed):before {
