--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,6 @@ body {
 .container {
     width: auto;
     max-width: 1250px;
-    padding: 20px;
 }
 
 .footer {
@@ -35,6 +34,7 @@ body {
     height: 310px;
     background-color: #7d7d7d;
     color: #ffffff;  
+    padding-top: 40px;
 }
 
 .footer a {
